# ui-automation

./: README.md
backend/: .gitignore  pyproject.toml
frontend/: package-lock.json
