[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jackson.wen <jackson.wen@xm.wonder.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.0"}
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
